# high-level-kafka

./: Cargo.toml  README.md
.github/workflows/: publish.yml
examples/: consumer.rs  publisher.rs
src/: consumer.rs  lib.rs  publisher.rs
