[package]
name = "high-level-kafka"
authors = ["Kasun Ranasingge <kasunranasinghe303@gmail.com>"]
description = "High Level Kafka client for Rust"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/keaz/high-level-kafka"
keywords = ["kafka", "client", "rdkafka", "async","high-level"]
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
log = "0.4.20"
rdkafka = {version = "0.36.0"}
serde = "1.0.192"
serde_json = "1.0.108"
tokio = { version = "1.34.0", features = ["macros","rt-multi-thread","sync"] }
