[package]
name = "high-level-kafka"
authors = ["Kasun Ranasingge <kasunranasinghe303@gmail.com>"]
description = "High Level Kafka client for Rust"
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/keaz/high-level-kafka"
keywords = ["kafka", "client", "rdkafka", "async", "high-level"]
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.95"
futures = "0.3.31"
log = "0.4.25"
rdkafka = { version = "0.37.0" }
serde = "1.0.217"
serde_json = "1.0.138"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["rt", "time", "sync"] }

[features]
default = ["rdkafka/default"]
native-runtime = ["rdkafka/naive-runtime"]
cmake-build = ["rdkafka/cmake-build"]
cmake_build = ["rdkafka/cmake_build"]
dynamic-linking = ["rdkafka/dynamic-linking"]
dynamic_linking = ["rdkafka/dynamic_linking"]
ssl = ["rdkafka/ssl"]
ssl-vendored = ["rdkafka/ssl-vendored"]
gssapi = ["rdkafka/gssapi"]
gssapi-vendored = ["rdkafka/gssapi-vendored"]
sasl = ["rdkafka/sasl"]
libz = ["rdkafka/libz"]
libz-static = ["rdkafka/libz-static"]
curl = ["rdkafka/curl"]
curl-static = ["rdkafka/curl-static"]
zstd = ["rdkafka/zstd"]
zstd-pkg-config = ["rdkafka/zstd-pkg-config"]
external-lz4 = ["rdkafka/external-lz4"]
external_lz4 = ["rdkafka/external_lz4"]

[dev-dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "time"] }
